1.同步时若存咋同步文件不存在则先不同步到目标应用文件夹下(因当用户文件用户未登录同步时，在用户登录后会将其覆盖) 2.将Process用ProcessBuilder包装，可以读取ErrorStream即当文件不存在时可以读取错误信息